# bzard

./: .clang-format  BzardExtraNotifications.qml  BzardHistoryNotification.qml  BzardHistoryWindow.qml  BzardNotificationContainer.qml  CMakeLists.txt  README.md  bzard-notifier.desktop  bzard-notifier.spec  bzard_brightness_monitor.cpp  bzard_brightness_monitor.h  bzard_config.cpp  bzard_config.h  bzard_dbus_notification.h  bzard_dbus_service.cpp  bzard_dbus_service.h  bzard_disposition.cpp  bzard_disposition.h  bzard_expiration_controller.cpp  bzard_expiration_controller.h  bzard_fullscreen_detector.h  bzard_history.cpp  bzard_history.h  bzard_notification.cpp  bzard_notification.h  bzard_notification_modifiers.cpp  bzard_notification_modifiers.h  bzard_notification_receiver.cpp  bzard_notification_receiver.h  bzard_notifications.cpp  bzard_notifications.h  bzard_qml_brightness_monitor.cpp  bzard_qml_brightness_monitor.h  bzard_themes.cpp  bzard_themes.h  bzard_top_down.cpp  bzard_top_down.h  bzard_tray_icon.cpp  bzard_tray_icon.h  bzard_udev_monitor.cpp  (+23 more)
X11-plugin/: x11fullscreendetector.cpp  x11fullscreendetector.h  x11fullscreendetectorprivate.cpp  x11fullscreendetectorprivate.h
themes/default/: theme
themes/pony/: theme
